resolve issue05-4
